<resources>
    <string name="app_name">My Application</string>

    <!-- BEGIN: MainActivity/Login Page -->

        <!-- Hints -->
        <string name="login_text_hint">Username</string>
        <string name="pw_hint">Password</string>

        <!-- Labels -->
        <string name="hello_world">Hello world!</string>
        <string name="action_settings">Settings</string>
        <string name="login_label">Username:</string>
        <string name="btn_login">Sign In</string>
        <string name="forgot_lbl">Forgot Password</string>
        <string name="remember_lbl">Remember Me</string>
        <string name="page_lbl">Please Sign In</string>
        <string name="benn0039">benn0039</string>
        <string name="chk_remember">"Remember Me"</string>

        <!-- Toasts -->
        <string name="tst_user">"Username: "</string>
        <string name="tst_password">"Password: "</string>
        <string name="tst_chk_state">"Checkbox State: "</string>
        <string name="tst_loginOnClick">"Login Button :: OnClick() "</string>
        <string name="tst_forgotOnClick">"Forgot My Password? :: OnClick() "</string>

        <!-- Errors -->
        <string name="err_login">"Please Enter your Algonquin email"</string>

    <!-- END: MainActivity -->


</resources>
