<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/wtc1">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email_input"
        android:hint="@string/login_text_hint"
        android:textColor="#e8e8e8"
        android:theme="@android:style/Theme.Material.Light"
        android:typeface="monospace"
        android:layout_marginBottom="34dp"
        android:layout_above="@+id/pass_input"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/activity_vertical_margin" />

    <!-- TODO: some stuff here -->

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/pass_input"
        android:hint="@string/pw_hint"
        android:theme="@android:style/Theme.Material.Light"
        android:textColor="#e8e8e8"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_vertical_margin" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:id="@+id/button"
        android:theme="@android:style/Theme.Light"
        android:height="30dp"
        android:alpha=".6"
        android:textColor="@android:color/primary_text_light"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@+id/pass_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/forgot_lbl"
        android:id="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/secondary_text_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/remember_lbl"
        android:id="@+id/textView2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/secondary_text_dark" />
</RelativeLayout>
